* Fixed issue in harpcollocate when providing a -nx option without a -ny.

* harpcollocate now ignores empty products instead of raising errors for them.

1.0 2017-09-25
~~~~~~~~~~~~~~

* The import and ingest functions have been combined into a single import
  function that can both read HARP compliant products as well as ingest from
  the supported external formats. This means:
  - harp_import() and harp_ingest() are combined into a single harp_import()
  - harp_ingest_test() has been renamed to harp_import_test()
  - harpfilter has been removed (use harpconvert instead)
  - '--test' option of harpconvert has been removed (use harpcheck instead)

* harpcollocate has been completely rewritten.
  - any 1D time-dependent variable can now be a collocation criterium
  - nearest neighbour filtering with weighted average is no longer supported
  - collocation result files are not backward compatible due to a change in
    the CSV header
  - arguments to harp_collocation_result_new() and
    harp_collocation_result_add_pair() have changed

* Added support for enumeration variables. Enumeration variables have a int8,
  int16, or int32 type and provide an index into a fixed list of enum names.
  Enumeration variables can be treated as string values in operations.

* Added MATLAB and IDL interfaces for HARP.

* Added -o option to harpdump and harpmerge.

* Added -a and -o options for 'harpdump --list-derivations'.

* '--list-derivations' option of harpconvert has been removed (use harpdump
  instead).

* Added -l option to harpmerge.

* Renamed area/point operations:
  - area_mask_covers_area -> area_covers_area
  - area_mask_covers_point -> point_in_area
  - area_mask_intersects_area -> area_intersects_area
  - point_in_area -> area_covers_point
  The first part of the operation name now reflects the item in the
  product and the second part reflects the parameter that is provided.

* Improved performance of point/area vs. area overlap operations by first